delete slot api
